--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ matplotlib==3.8.2
 stable-baselines3==2.0.0
 gym==0.26.2
 ipykernel==6.24.0
+numpy==1.26.3
 pandas == 2.1.3
 Shimmy==1.3.0
 pyyaml==6.0.1
